--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,10 @@
+<style>
+  body{
+  background-image: linear-gradient(to bottom, rgb(226, 226, 226), rgb(143, 143, 143));
+}
+
+</style>
+
 <!doctype html>
 <html lang="en">
 <head>
